To set the go to next cell action as the default action

--- a/index.html
+++ b/index.html
@@ -1275,13 +1275,13 @@ var I18N = {},
 								'<label data-label="' +_('Seconds') + '"><input id="actions-seconds" type="text" class="item-number-editable" value="' + ( typeof(actions[actionIndex]) != "undefined" ? self.convertCyclesToSeconds( actions[actionIndex][0] ) : self.convertCyclesToSeconds( 1 ) ) + '"></label>',
 							'</div>',
 							'<div class="item">',
-								'<label class="action"><input type="radio" name="endaction" value="0"' + ( defaultIt || ( typeof(actions[actionIndex]) != "undefined" && actions[actionIndex][1] == 0 ) ? ' checked="checked"' : '' ) + '><span>Repeat the animation</span></label>',
+								'<label class="action"><input type="radio" name="endaction" value="2"' + ( defaultIt || ( typeof(actions[actionIndex]) != "undefined" && actions[actionIndex][1] == 2 ) ? ' checked="checked"' : '' ) + '><span>Go to the next cell</span></label>',
 							'</div>',
 							'<div class="item">',
 								'<label class="action"><input type="radio" name="endaction" value="1"' + ( typeof(actions[actionIndex]) != "undefined" && actions[actionIndex][1] == 1 ? ' checked="checked"' : '' ) + '><span>Stop the animation</span></label>',
 							'</div>',
 							'<div class="item">',
-								'<label class="action"><input type="radio" name="endaction" value="2"' + ( typeof(actions[actionIndex]) != "undefined" && actions[actionIndex][1] == 2 ? ' checked="checked"' : '' ) + '><span>Go to the next cell</span></label>',
+								'<label class="action"><input type="radio" name="endaction" value="0"' + ( typeof(actions[actionIndex]) != "undefined" && actions[actionIndex][1] == 0 ? ' checked="checked"' : '' ) + '><span>Repeat the animation</span></label>',
 							'</div>',
 						'</div>',
 				);
