New objects added (chairs and tables and world map)

--- a/index.html
+++ b/index.html
@@ -2939,6 +2939,254 @@ $(function(){ SMApp({"scale":"1","unit":"px","colorFormat":"color-hex",
 		"layers":[
 			{
 				"objectID":"",
+				"type":"shape",
+				"name":"Map",
+				"rect":{
+					"x":0,
+					"y":0,
+					"width":723,
+					"height":452
+				},
+				"rotation":0,
+				"radius":0,
+				"borders":[],
+				"fills":[],
+				"shadows":[],
+				"opacity":1,
+				"styleName":"",
+				"css":[]
+			}
+		],
+		"pageName":"Object",
+		"pageObjectID":"16337C62-3CA4-4665-A407-A9565453CC0E",
+		"name":"Map",
+		"objectID":"3901E025-02ED-49D5-BF59-8D3499613C10",
+		"width":170,
+		"height":144,
+		"imagePath":"assets/map_still/thumb.png",
+		"assetPath":"assets/map_still/asset.json"
+	},
+	{
+		"layers":[
+			{
+				"objectID":"",
+				"type":"shape",
+				"name":"Map Sliding",
+				"rect":{
+					"x":0,
+					"y":0,
+					"width":1100,
+					"height":452
+				},
+				"rotation":0,
+				"radius":0,
+				"borders":[],
+				"fills":[],
+				"shadows":[],
+				"opacity":1,
+				"styleName":"",
+				"css":[]
+			}
+		],
+		"pageName":"Object",
+		"pageObjectID":"16337C62-3CA4-4665-A407-A9565453CC0E",
+		"name":"Map Sliding",
+		"objectID":"3901E025-12ED-49D5-BF59-8D3499613C10",
+		"width":170,
+		"height":144,
+		"imagePath":"assets/map_sliding/thumb.png",
+		"assetPath":"assets/map_sliding/asset.json"
+	},
+	{
+		"layers":[
+			{
+				"objectID":"",
+				"type":"shape",
+				"name":"Table",
+				"rect":{
+					"x":0,
+					"y":0,
+					"width":197,
+					"height":216
+				},
+				"rotation":0,
+				"radius":0,
+				"borders":[],
+				"fills":[],
+				"shadows":[],
+				"opacity":1,
+				"styleName":"",
+				"css":[]
+			}
+		],
+		"pageName":"Object",
+		"pageObjectID":"16337C62-3CA4-4665-A407-A9565453CC0E",
+		"name":"Table",
+		"objectID":"3901E025-22ED-49D5-BF59-8D3499613C10",
+		"width":170,
+		"height":144,
+		"imagePath":"assets/table_still/thumb.png",
+		"assetPath":"assets/table_still/asset.json"
+	},
+	{
+		"layers":[
+			{
+				"objectID":"",
+				"type":"shape",
+				"name":"Table Sliding",
+				"rect":{
+					"x":0,
+					"y":0,
+					"width":900,
+					"height":420
+				},
+				"rotation":0,
+				"radius":0,
+				"borders":[],
+				"fills":[],
+				"shadows":[],
+				"opacity":1,
+				"styleName":"",
+				"css":[]
+			}
+		],
+		"pageName":"Object",
+		"pageObjectID":"16337C62-3CA4-4665-A407-A9565453CC0E",
+		"name":"Table Sliding",
+		"objectID":"3901E025-32ED-49D5-BF59-8D3499613C10",
+		"width":170,
+		"height":144,
+		"imagePath":"assets/table_sliding/thumb.png",
+		"assetPath":"assets/table_sliding/asset.json"
+	},
+	{
+		"layers":[
+			{
+				"objectID":"",
+				"type":"shape",
+				"name":"Chair",
+				"rect":{
+					"x":0,
+					"y":0,
+					"width":125,
+					"height":216
+				},
+				"rotation":0,
+				"radius":0,
+				"borders":[],
+				"fills":[],
+				"shadows":[],
+				"opacity":1,
+				"styleName":"",
+				"css":[]
+			}
+		],
+		"pageName":"Object",
+		"pageObjectID":"16337C62-3CA4-4665-A407-A9565453CC0E",
+		"name":"Chair",
+		"objectID":"3901E025-42ED-49D5-BF59-8D3499613C10",
+		"width":170,
+		"height":144,
+		"imagePath":"assets/chair_still/thumb.png",
+		"assetPath":"assets/chair_still/asset.json"
+	},
+	{
+		"layers":[
+			{
+				"objectID":"",
+				"type":"shape",
+				"name":"Chair Sliding",
+				"rect":{
+					"x":0,
+					"y":0,
+					"width":900,
+					"height":420
+				},
+				"rotation":0,
+				"radius":0,
+				"borders":[],
+				"fills":[],
+				"shadows":[],
+				"opacity":1,
+				"styleName":"",
+				"css":[]
+			}
+		],
+		"pageName":"Object",
+		"pageObjectID":"16337C62-3CA4-4665-A407-A9565453CC0E",
+		"name":"Chair Sliding",
+		"objectID":"3901E025-52ED-49D5-BF59-8D3499613C10",
+		"width":170,
+		"height":144,
+		"imagePath":"assets/chair_sliding/thumb.png",
+		"assetPath":"assets/chair_sliding/asset.json"
+	},
+	{
+		"layers":[
+			{
+				"objectID":"",
+				"type":"shape",
+				"name":"Right Chair",
+				"rect":{
+					"x":0,
+					"y":0,
+					"width":125,
+					"height":216
+				},
+				"rotation":0,
+				"radius":0,
+				"borders":[],
+				"fills":[],
+				"shadows":[],
+				"opacity":1,
+				"styleName":"",
+				"css":[]
+			}
+		],
+		"pageName":"Object",
+		"pageObjectID":"16337C62-3CA4-4665-A407-A9565453CC0E",
+		"name":"Right Chair",
+		"objectID":"3901E025-62ED-49D5-BF59-8D3499613C10",
+		"width":170,
+		"height":144,
+		"imagePath":"assets/right_chair_still/thumb.png",
+		"assetPath":"assets/right_chair_still/asset.json"
+	},
+	{
+		"layers":[
+			{
+				"objectID":"",
+				"type":"shape",
+				"name":"Right Chair Sliding",
+				"rect":{
+					"x":0,
+					"y":0,
+					"width":900,
+					"height":420
+				},
+				"rotation":0,
+				"radius":0,
+				"borders":[],
+				"fills":[],
+				"shadows":[],
+				"opacity":1,
+				"styleName":"",
+				"css":[]
+			}
+		],
+		"pageName":"Object",
+		"pageObjectID":"16337C62-3CA4-4665-A407-A9565453CC0E",
+		"name":"Right Chair Sliding",
+		"objectID":"3901E025-72ED-49D5-BF59-8D3499613C10",
+		"width":170,
+		"height":144,
+		"imagePath":"assets/right_chair_sliding/thumb.png",
+		"assetPath":"assets/right_chair_sliding/asset.json"
+	},
+	{
+		"layers":[
+			{
+				"objectID":"",
 				"type":"text",
 				"name":"Speech Bubble",
 				"rect":{
