Addition of new objects

--- a/index.html
+++ b/index.html
@@ -3312,6 +3312,37 @@ $(function(){ SMApp({"scale":"1","unit":"px","colorFormat":"color-hex",
 			{
 				"objectID":"",
 				"type":"shape",
+				"name":"Sitting",
+				"rect":{
+					"x":0,
+					"y":0,
+					"width":330,
+					"height":420
+				},
+				"rotation":0,
+				"radius":0,
+				"borders":[],
+				"fills":[],
+				"shadows":[],
+				"opacity":1,
+				"styleName":"",
+				"css":[]
+			}
+		],
+		"pageName":"JONDO",
+		"pageObjectID":"F6337C62-3CA4-4665-A407-A9565453CC0E",
+		"name":"Sitting",
+		"objectID":"2676d700aba6597fd38fd4197690db93",
+		"width":240,
+		"height":404,
+		"imagePath":"assets/jondo_sitting/thumb.png",
+		"assetPath":"assets/jondo_sitting/asset.json"
+	},
+	{
+		"layers":[
+			{
+				"objectID":"",
+				"type":"shape",
 				"name":"Talking",
 				"rect":{
 					"x":0,
