New object addition

--- a/index.html
+++ b/index.html
@@ -3436,6 +3436,37 @@ $(function(){ SMApp({"scale":"1","unit":"px","colorFormat":"color-hex",
 			{
 				"objectID":"",
 				"type":"shape",
+				"name":"Sitting",
+				"rect":{
+					"x":0,
+					"y":0,
+					"width":330,
+					"height":420
+				},
+				"rotation":0,
+				"radius":0,
+				"borders":[],
+				"fills":[],
+				"shadows":[],
+				"opacity":1,
+				"styleName":"",
+				"css":[]
+			}
+		],
+		"pageName":"Prospect",
+		"pageObjectID":"D6337C62-3CA4-4665-A407-A9565453CC0E",
+		"name":"Sitting",
+		"objectID":"D901A062-51ED-49D5-BF59-8D3499613C10",
+		"width":300,
+		"height":404,
+		"imagePath":"assets/prospect_sitting/thumb.png",
+		"assetPath":"assets/prospect_sitting/asset.json"
+	},
+	{
+		"layers":[
+			{
+				"objectID":"",
+				"type":"shape",
 				"name":"Talking",
 				"rect":{
 					"x":0,
