Addition of new objects

--- a/index.html
+++ b/index.html
@@ -2940,6 +2940,37 @@ $(function(){ SMApp({"scale":"1","unit":"px","colorFormat":"color-hex",
 			{
 				"objectID":"",
 				"type":"shape",
+				"name":"Paper Hand",
+				"rect":{
+					"x":0,
+					"y":0,
+					"width":137,
+					"height":107
+				},
+				"rotation":0,
+				"radius":0,
+				"borders":[],
+				"fills":[],
+				"shadows":[],
+				"opacity":1,
+				"styleName":"",
+				"css":[]
+			}
+		],
+		"pageName":"Prospect",
+		"pageObjectID":"D6337C62-3CA4-4665-A407-A9565453CC0E",
+		"name":"Paper Hand",
+		"objectID":"EA01A062-51ED-49A5-BF59-8D3499613C10",
+		"width":300,
+		"height":404,
+		"imagePath":"assets/prospect_hand/thumb.png",
+		"assetPath":"assets/prospect_hand/asset.json"
+	},
+	{
+		"layers":[
+			{
+				"objectID":"",
+				"type":"shape",
 				"name":"Map",
 				"rect":{
 					"x":0,
@@ -3343,6 +3374,68 @@ $(function(){ SMApp({"scale":"1","unit":"px","colorFormat":"color-hex",
 			{
 				"objectID":"",
 				"type":"shape",
+				"name":"Handing",
+				"rect":{
+					"x":0,
+					"y":0,
+					"width":330,
+					"height":420
+				},
+				"rotation":0,
+				"radius":0,
+				"borders":[],
+				"fills":[],
+				"shadows":[],
+				"opacity":1,
+				"styleName":"",
+				"css":[]
+			}
+		],
+		"pageName":"JONDO",
+		"pageObjectID":"F6337C62-3CA4-4665-A407-A9565453CC0E",
+		"name":"Handing",
+		"objectID":"2676d700aba6597ad38fd4197690db93",
+		"width":240,
+		"height":404,
+		"imagePath":"assets/jondo_sit_handing/thumb.png",
+		"assetPath":"assets/jondo_sit_handing/asset.json"
+	},
+	{
+		"layers":[
+			{
+				"objectID":"",
+				"type":"shape",
+				"name":"Sit still",
+				"rect":{
+					"x":0,
+					"y":0,
+					"width":330,
+					"height":420
+				},
+				"rotation":0,
+				"radius":0,
+				"borders":[],
+				"fills":[],
+				"shadows":[],
+				"opacity":1,
+				"styleName":"",
+				"css":[]
+			}
+		],
+		"pageName":"JONDO",
+		"pageObjectID":"F6337C62-3CA4-4665-A407-A9565453CC0E",
+		"name":"Sit still",
+		"objectID":"2676d700aba6197ad38fd4197690db93",
+		"width":240,
+		"height":404,
+		"imagePath":"assets/jondo_sit/thumb.png",
+		"assetPath":"assets/jondo_sit/asset.json"
+	},
+	{
+		"layers":[
+			{
+				"objectID":"",
+				"type":"shape",
 				"name":"Talking",
 				"rect":{
 					"x":0,
@@ -3461,6 +3554,37 @@ $(function(){ SMApp({"scale":"1","unit":"px","colorFormat":"color-hex",
 		"height":404,
 		"imagePath":"assets/prospect_sitting/thumb.png",
 		"assetPath":"assets/prospect_sitting/asset.json"
+	},
+	{
+		"layers":[
+			{
+				"objectID":"",
+				"type":"shape",
+				"name":"Sit still",
+				"rect":{
+					"x":0,
+					"y":0,
+					"width":330,
+					"height":420
+				},
+				"rotation":0,
+				"radius":0,
+				"borders":[],
+				"fills":[],
+				"shadows":[],
+				"opacity":1,
+				"styleName":"",
+				"css":[]
+			}
+		],
+		"pageName":"Prospect",
+		"pageObjectID":"D6337C62-3CA4-4665-A407-A9565453CC0E",
+		"name":"Sit still",
+		"objectID":"D901A062-51ED-49A5-BF59-8D3499613C10",
+		"width":300,
+		"height":404,
+		"imagePath":"assets/prospect_sit/thumb.png",
+		"assetPath":"assets/prospect_sit/asset.json"
 	},
 	{
 		"layers":[
