--- a/index.html
+++ b/index.html
@@ -2940,6 +2940,37 @@ $(function(){ SMApp({"scale":"1","unit":"px","colorFormat":"color-hex",
 			{
 				"objectID":"",
 				"type":"shape",
+				"name":"Aeroplane",
+				"rect":{
+					"x":0,
+					"y":0,
+					"width":940,
+					"height":480
+				},
+				"rotation":0,
+				"radius":0,
+				"borders":[],
+				"fills":[],
+				"shadows":[],
+				"opacity":1,
+				"styleName":"",
+				"css":[]
+			}
+		],
+		"pageName":"3D Test",
+		"pageObjectID":"16337C12-3CA4-4665-A407-A9565453CC0E",
+		"name":"Aeroplane",
+		"objectID":"3901E035-61ED-49D5-BF59-8D3499613C10",
+		"width":170,
+		"height":144,
+		"imagePath":"assets/aeroplane/thumb.png",
+		"assetPath":"assets/aeroplane/asset.json"
+	},
+	{
+		"layers":[
+			{
+				"objectID":"",
+				"type":"shape",
 				"name":"Paper Hand",
 				"rect":{
 					"x":0,
