When a cell is deleted the reference to the JSON object should be deleted

--- a/index.html
+++ b/index.html
@@ -2049,6 +2049,7 @@ var I18N = {},
 					newCell.name = "Copy of " + self.project.cells[self.cellIndex].name;
 					newCell.layers[0].name = "Copy of " + self.project.cells[self.cellIndex].name;
 					newCell.layers[0].objectID = self.createGUID();
+					delete newCell.assetPath;
 							
 					self.project.cells.push(newCell);
 					self.cells();
