Remove JS extra comma

--- a/index.html
+++ b/index.html
@@ -1305,7 +1305,7 @@ var I18N = {},
 							'<div class="item">',
 								'<label class="action"><input type="radio" name="endaction" value="0"' + ( typeof(actions[actionIndex]) != "undefined" && actions[actionIndex][1] == 0 ? ' checked="checked"' : '' ) + '><span>Repeat the animation</span></label>',
 							'</div>',
-						'</div>',
+						'</div>'
 				);
 				
 				html.push(this.propertyType('CELL ACTIONS', output.join('')));
